--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,15 @@ repository = "https://github.com/oisinmulvihill/om-grrs"
 keywords = ["cli", "search", "demo"]
 categories = ["command-line-utilities"]
 
+[profile.dev]
+# The development profile, used for `cargo build`
+opt-level = 0  # Controls the --opt-level the compiler builds with
+debug = true   # Controls whether the compiler passes `-g`
+
+[profile.release]
+# The release profile, used for `cargo build --release`
+opt-level = 3
+debug = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
